# cython-project-template

./: .gitignore  README.md  pyproject.toml  setup.py
cpp_code/: CMakeLists.txt  README.md  foo.cpp  foo.hpp
mycypackage/: __init__.py  _foo.pyx  foo.py  utils.py
tests/: test_double.py
